# QuestRealityCapture

./: .gitignore  LICENSE  QuestRealityCapture.slnx  README.md
Assets/Animation/InfoCanvas/: InfoCanvas.controller  NoPermission.anim  Running.anim  Standby.anim
Assets/Oculus/: OculusProjectConfig.asset
Assets/Plugins/Android/: AndroidManifest.xml  mainTemplate.gradle  questcameralib.aar
Assets/RealityLog/ComputeShaders/: CopyDepthMap.compute  UpdateDepthCoverage.compute
Assets/RealityLog/Configs/: recording_config.default.json
Assets/RealityLog/Scenes/: RealityLogScene.unity
Assets/RealityLog/Scripts/Runtime/: RealityLog.asmdef
Assets/RealityLog/Shaders/: DepthCoveragePoints.shader
Assets/Resources/: DevAgentSettings.asset  OculusRuntimeSettings.asset  PerformanceTestRunInfo.json
Assets/Scripts/: EgoPoseLogger.cs  RoboticsLogger.cs
Assets/Settings/: Mobile_RPAsset.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/StreamingAssets/RealityLog/: recording_config.default.json  recording_session_config.example.json
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
Assets/XR/Settings/: OpenXR Package Settings.asset
Native/: CMakeLists.txt  README.md
Native/include/: qrc_camera_native.h
Native/src/: qrc_camera_native.cpp  qrc_stereo_camera_native.cpp
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
specs/: COMMON_RULES.md  INDEX.md  legacy_recording_format.md  live_recording_feedback.md  mruk_recording_format.md  native_camera_plugin.md  recording_session.md  unity_camera_architecture.md  yuv_storage_format.md
(+53 files in other folders)
